Center 'practice' heading to stop it jumping around the screen in a distracting manner with certain items.

--- a/css_includes/global_main.css
+++ b/css_includes/global_main.css
@@ -29,6 +29,7 @@ p.practice-box {
     height: 1.5em;
     padding-bottom: 1em;
     font-size: small;
+    text-align: center;
 }
 span.retry {
     color: blue;
